Refactor database initialization and update route names for consistency

--- a/templates/create.html
+++ b/templates/create.html
@@ -10,7 +10,7 @@
     <header>
         <h1>Create New Listing</h1>
         <nav>
-            <a href="{{ url_for('home') }}" class="button">Back to Listings</a>
+            <a href="{{ url_for('index') }}" class="button">Back to Listings</a>
         </nav>
     </header>
 
