--- a/templates/index.html
+++ b/templates/index.html
@@ -10,7 +10,7 @@
     <header>
         <h1>auto-listings.net</h1>
         <nav>
-            <a href="{{ url_for('new_listing') }}" class="button">Post New Listing</a>
+            <a href="{{ url_for('create') }}" class="button">Post New Listing</a>
         </nav>
     </header>
     
